--- a/index.html
+++ b/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>BMI Calculator</title>
-</head>
-<body>
-    
+  </head>
+  <body>
+    <main class="homepage">
+      <section class="heading">
+        <h1>BMI</h1>
+        <h2>calculator</h2>
+      </section>
+      <section class="calculator">
+        <!-- Height input -->
+        <label for="height">Height (cm): </label>
+        <input type="number" name="height" id="height" />
+        <br>
+        <!-- weight input -->
+        <label for="weight">Weight (kg): </label>
+        <input type="number" name="weight" id="weight" />
+      </section>
+    </main>
+
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
