--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
   <body>
     <main class="homepage">
       <section class="heading">
-        <h1>BMI</h1>
-        <h2>calculator</h2>
+        <h1>BMI calculator</h1>
       </section>
+      <!---->
       <section class="calculator">
-        <!-- Height input -->
+        <!---->
         <label for="height">Height (cm): </label>
         <input type="number" name="height" id="height" />
         <br>
-        <!-- weight input -->
+        <!---->
         <label for="weight">Weight (kg): </label>
         <input type="number" name="weight" id="weight" />
+
+
+        <button id="calculate">Calculate BMI</button>
       </section>
     </main>
 
