--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
 
 
         <button id="calculate">Calculate BMI</button>
+
+        <div class="result">
+            <p>Your BMI is&nbsp;</p>
+            <div id="result">00.00</div>
+            <p class="comment"></p>
+        </div>
       </section>
     </main>
 
